@@ -34,6 +34,7 @@ Application Fixes:
 - Dates in the Karma and Nuyen tab will now always follow the format of the language in which the program is localized, rather than following the format of the language of the system in which the program is running.
 - Fixed an issue where the registered sprite limit would not take augmentations into account.
 - Added the ability for created Adept Power improvements to ignore power limits when selecting the affected power. Closes #3721.
+- Chummy will now use translations from other languages. Closes #3540.
 
 Data Changes:
 
@@ -55,6 +56,7 @@ New Strings:
 - String_Bullet
 - String_Bullets
 - Checkbox_CreateImprovementIgnoreLimits
+- Chummy_Intro
 
 Changed Strings:
 
